@@ -1,3 +1,8 @@
+2006-11-25  Claudio Fontana  <claudio@gnu.org>
+
+	* libidu/scanners.c (get_token_lisp): provide rough support for
+	  character constants.
+
 2006-10-19  Claudio Fontana  <claudio@gnu.org>
 
 	* libidu/scanners.c (get_token_lisp): (tiny) fix bug in double
